# arlo-today

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: generate-tray-icon.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: auth.toml  data-api.toml  keychain.toml
src-tauri/src/: lib.rs  main.rs
src/components/: CreateTaskDialog.tsx  EditTaskDialog.tsx  ProjectDetailView.tsx  ProjectListView.tsx  QuickAdd.tsx  SignedOut.tsx  TaskList.tsx  TaskRow.tsx  ViewTabs.tsx
src/hooks/: useTasks.ts
src/lib/: auth.ts  data-api.ts  format.ts  task-filters.ts  task-form.ts  today-tasks.ts
src/types/: productivity.ts
