[package]
name = "arlo-menubar"
version = "0.1.0"
description = "Arlo menu bar companion for Today tasks"
authors = ["Jacob Tartabini"]
edition = "2021"

[lib]
name = "arlo_menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
url = "2"
reqwest = { version = "0.12", features = ["json"] }
